fix the error in the path email/email
